<resources>
    <string name="app_name">GestaoConsulta</string>
    <string name="nome">Nome:</string>
    <string name="cadastrar_medicos">Cadastrar Médicos</string>
    <string name="especialidade">Especialidade:</string>
    <string name="salvar_lista">Salvar Lista</string>
    <string name="id">id</string>
    <string name="medicos_cadastrados">Médicos Cadastrados</string>
    <string name="datas_selecionadas">Datas Selecionada:</string>
    <string name="selecionar_hor_rios_dos_dias_cadastrados">Selecionar horários dos dias cadastrados</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hor_rios_de_atendimendo">Horários de Atendimendo</string>
    <string name="in_cio_do_atendimento">Início do Atendimento:</string>
    <string name="ex_16_30">Ex: 16:30</string>
    <string name="final_do_atendimento">Final do Atendimento</string>
    <string name="ex_8_30">Ex: 8:30</string>
    <string name="at">até:</string>
    <string name="_25_12_2012">25/12/2012:</string>
    <string name="per_odo_de">Dia:</string>
    <string name="_30_12_2012">30/12/2012</string>
    <string name="hor_rio">Horário:</string>
    <string name="_8_30">8:30</string>
    <string name="_00_30">00:30</string>
    <string name="per_odo_cada_atendimento">Período cada atendimento:</string>
    <string name="_5_00">5:00</string>
    <string name="cliente_example">Maria das Dores</string>
    <string name="medico_example">Dr.Mario</string>
    <string name="example_profissional">Profissional:</string>
    <string name="hora_selecionadas">Horário Selecionado:</string>
    <string name="filtrar_por_especialidades">Filtrar por especialidades</string>
    <string name="reagendamentos">ReAgendamentos</string>
    <string name="salvar">salvar</string>
    <string name="hist_rico">Histórico</string>
    <string name="agendamentos">Agendamentos</string>
    <string name="title_activity_pedidos_agend">PedidosAgendActivity</string>
    <string name="pedidos_de_reagendamentos">Pedidos de Reagendamentos</string>
    <string name="pedidos_de_agendamentos">Pedidos de Agendamentos</string>
</resources>