<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/ic_agendamentos"
        android:title="@string/agendamentos"
        android:icon="@drawable/ic_schedule"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/ic_historico"
        android:title="@string/hist_rico"
        android:icon="@drawable/ic_history"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/ic_list"
        android:icon="@drawable/ic_list"
        android:title="@string/reagendamentos"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/ic_save"
        android:title="@string/salvar"
        android:icon="@drawable/ic_save"
        app:showAsAction="always"
        />
</menu>