<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_medico"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_nome"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/nome" />

        <TextView
            android:id="@+id/tv_especialidade"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/especialidade" />
    </com.google.android.material.card.MaterialCardView>



    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textViewSelectedDates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lb_datas_selecionadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datas_selecionadas"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewSelectedDates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />

    <TextView
        android:id="@+id/textViewSelectedDates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:padding="16dp"
        android:text="Selected Dates:"
        app:layout_constraintBottom_toTopOf="@+id/motion_data_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motion_data_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layoutDescription="@xml/fragment_cadastro_datapor_medico_scene"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_list" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_datas_list"
            android:visibility="gone"
            tools:listitem="@layout/item_data_cadastrada"
            android:layout_width="wrap_content"
            android:layout_height="250dp"/>
    </androidx.constraintlayout.motion.widget.MotionLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
